<resources>
    <string name="app_name">TDone</string>
    <string name="add_Item_Description">Crear un nuevo Grupo, Tarea o Nota</string>
    <string name="navigate_menu_Button_Description">Entrar al Menu Hamburguesa</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="iten_nav_home_text">Inicio</string>
    <string name="iten_nav_groups_text">Mis grupos</string>
    <string name="iten_nav_tasks_text">Todas las tareas</string>
    <string name="iten_nav_notes_text">Mis Notas</string>
    <string name="iten_nav_history_text">Historial</string>
    <string name="iten_nav_log_out_text">Cerrar Sesión</string>
    <string name="iten_nav_profile_group_text">Perfil</string>
    <string name="iten_nav_idioma_spanish">Español</string>
    <string name="iten_nav_idioma_english">Inglés</string>
    <string name="iten_nav_idioma">Idioma</string>
    <string name="item_notas">NOTAS</string>
    <string name="item_tareas">TAREAS</string>
    <string name="hint_email">Escribe tu e-mail</string>
    <string name="hint_password">Escribe tu contraseña mín 6 caracteres</string>
    <string name="inic_ses">INICIAR SESIÓN</string>
    <string name="usuario">Escribe tu nombre de usuario</string>
    <string name="hint_repassword">Reescribe tu contraseña mín 6 caracteres</string>
    <string name="registrate">REGISTRATE</string>
    <string name="no_registrado"> ¿Aún no se ha registrado? ¡Registrese!</string>
    <string name="ya_registrado"> ¿Ya está registrado? ¡Inicie Sesión!</string>
    <string name="group_name">Nombre del Grupo</string>
    <string name="description">Descripción</string>
    <string name="add">Añadir</string>
    <string name="Title">Título</string>
    <string name="Content">Contenido</string>
    <string name="name_tag">Nombre Tag</string>
    <string name="empty_fields">¡¡¡Los espacios en blanco no estan permitidos!!!</string>
    <string name="not_verify">Aún no se ha verificado</string>
    <string name="time_verify">Tienes 15 segundos para verificar tu e-mail</string>
    <string name="not_matching">La contraseña no coincide</string>
    <string name="verify_email">Verifique su correo electrónico para continuar</string>
    <string name="welcom_user_title">Introduciendo a TDone</string>
    <string name="welcom_user_body">Bienvenido a TDone, crea notas, tareas y personaliza tu estadia</string>
    <string name="Fecha_escogida">Fecha escogida</string>
    <string name="Inicio">Inicio😀</string>
    <string name="Notas">Notas</string>
    <string name="Tareas">Tareas</string>
    <string name="Grupos">Grupos</string>
    <string name="Historal">Historal</string>
    <string name="Selecciona_una_fecha_futura">Selecciona una fecha futura</string>
    <string name="A_crear_una_Nota">A crear una Nota</string>
    <string name="A_crear_una_tarea">A crear una tarea</string>
    <string name="A_crear_un_grupo">A crear un grupo</string>
</resources>