<?xml version="1.0" encoding="utf-8"?>
<!-- Este archivo XML define un menú para una aplicación Android. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Definición de un grupo de elementos del menú. -->
    <group>
        <!-- Elemento del menú "Home" con un título, un ID único y un icono. -->
        <item android:title="@string/iten_nav_home_text"
            android:id="@+id/item_nav_home"
            android:icon="@drawable/ic_home"/>

        <!-- Otros elementos del menú similares para grupos, tareas, notas y historial. -->
        <item android:title="@string/iten_nav_groups_text"
            android:id="@+id/item_nav_groups"
            android:icon="@drawable/ic_group"/>
        <item android:title="@string/iten_nav_tasks_text"
            android:id="@+id/item_nav_tasks"
            android:icon="@drawable/ic_task"/>
        <item android:title="@string/iten_nav_notes_text"
            android:id="@+id/item_nav_notes"
            android:icon="@drawable/ic_note"/>
        <item android:title="@string/iten_nav_history_text"
            android:id="@+id/item_nav_history"
            android:icon="@drawable/ic_history"/>
    </group>

    <!-- Elemento del menú para seleccionar el idioma. -->
    <item android:title="@string/iten_nav_idioma">
        <!-- Submenú para idioma con elementos "Inglés" y "Español". -->
        <menu>
            <group>
                <item android:title="@string/iten_nav_idioma_english"
                    android:id="@+id/language_english"/>
                <item android:title="@string/iten_nav_idioma_spanish"
                    android:id="@+id/language_spanish"/>
            </group>
        </menu>
    </item>

    <!-- Elemento del menú para opciones de perfil. -->
    <item android:title="@string/iten_nav_profile_group_text">
        <!-- Submenú para opciones de perfil con un elemento de "Cerrar sesión". -->
        <menu>
            <group>
                <item android:title="@string/iten_nav_log_out_text"
                    android:id="@+id/log"
                    android:icon="@drawable/ic_logout"/>
            </group>
        </menu>
    </item>
</menu>
